# cmessenger

./: CMakeLists.txt  README.md
src/: main.c  main.h
src/client/: client.c  client.h
src/log/: siren.c  siren.h
src/server/: server.c  server.h
src/utils/: cmesseger_common.h  sem_utils.c  sem_utils.h  shared_memory_utils.c  shared_memory_utils.h  thread_initializer.h
